@@ -1,5 +1,8 @@
 2007-02-09  Scott James Remnant  <scott@netsplit.com>
 
+	* init/tests/test_cfgfile.c (test_read_job): Make sure that a deleted
+	job gets resurrected.
+
 	* init/cfgfile.c (cfg_visitor): Correct number of arguments and call
 	to cfg_job_name.
 
